[package]
name = "http-pack"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = "1"
http = "1.1"
serde = { version = "1", features = ["derive"] }
message-packetizer = { path = "../message-packetizer" }
httparse = { version = "1", optional = true }
http-body = { version = "1", optional = true }
http-body-util = { version = "0.1", optional = true }
h3 = { git = "https://github.com/hyperium/h3.git", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
h2 = "0.4"
h3 = { git = "https://github.com/hyperium/h3.git" }
h3-quinn = { git = "https://github.com/hyperium/h3.git" }
quinn = "0.11"
rcgen = "0.13"
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
rustls-pemfile = "2"

[features]
default = ["body", "h1", "h3"]
body = ["dep:http-body", "dep:http-body-util"]
h1 = ["dep:httparse"]
h3 = ["dep:h3"]
