[package]
name = "http-pack"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Compact binary serialization for HTTP requests and responses (HPK1 format)"
repository = "https://github.com/wavey-ai/http-pack"
readme = "README.md"

[dependencies]
bytes = "1"
http = "1.1"
serde = { version = "1", features = ["derive"] }
message-packetizer = "0.1.0"
httparse = { version = "1", optional = true }
http-body = { version = "1", optional = true }
http-body-util = { version = "0.1", optional = true }
h3 = { version = "0.0.8", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
h2 = "0.4"
h3 = "0.0.8"
h3-quinn = "0.0.10"
quinn = "0.11"
rcgen = "0.13"
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
rustls-pemfile = "2"

[features]
default = ["body", "h1", "h3"]
body = ["dep:http-body", "dep:http-body-util"]
h1 = ["dep:httparse"]
h3 = ["dep:h3"]
